update: database setup complete

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -48,10 +48,47 @@ docker-up:
 docker-down:
 	docker-compose down
 
+# Database Migration Commands
+
 # Run database migrations
 migrate:
-	alembic upgrade head
+	python scripts/manage_migrations.py upgrade
 
 # Create new migration
 migration:
+	python scripts/manage_migrations.py create --message "$(msg)"
+
+# Show migration status
+migrate-status:
+	python scripts/manage_migrations.py status
+
+# Test migrations
+migrate-test:
+	python scripts/manage_migrations.py test
+
+# Validate specific migration
+migrate-validate:
+	python scripts/manage_migrations.py validate --revision $(rev)
+
+# Show database schema
+migrate-schema:
+	python scripts/manage_migrations.py schema
+
+# Reset database (downgrade to base, then upgrade to head)
+migrate-reset:
+	python scripts/manage_migrations.py reset --force
+
+# Downgrade database
+migrate-down:
+	python scripts/manage_migrations.py downgrade --revision $(rev)
+
+# Backup database schema
+migrate-backup:
+	python scripts/manage_migrations.py backup --output $(file)
+
+# Legacy Alembic commands (for compatibility)
+alembic-migrate:
+	alembic upgrade head
+
+alembic-migration:
 	alembic revision --autogenerate -m "$(msg)"
