--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,6 +15,8 @@ dependencies = [
     "sqlalchemy>=2.0.23",
     "alembic>=1.13.1",
     "psycopg2-binary>=2.9.9",
+    "asyncpg>=0.30.0",
+    "greenlet>=3.2.3",
     "redis>=5.0.1",
     "python-jose[cryptography]>=3.3.0",
     "passlib[bcrypt]>=1.7.4",
@@ -28,6 +30,7 @@ test = [
     "pytest-asyncio>=0.21.1",
     "pytest-cov>=4.1.0",
     "httpx>=0.25.2",
+    "aiosqlite>=0.21.0",
 ]
 
 [tool.pytest.ini_options]
