--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -17,3 +17,9 @@ pytest-asyncio==0.21.1
 pytest-cov==4.1.0
 httpx==0.25.2
 aiosqlite==0.21.0
+google-cloud-storage==2.10.0
+google-cloud-secretmanager==2.16.4
+google-cloud-vision==3.4.4numpy==1.24.
+3
+scikit-learn==1.3.0
+aiohttp==3.9.1
