--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -19,7 +19,8 @@ httpx==0.25.2
 aiosqlite==0.21.0
 google-cloud-storage==2.10.0
 google-cloud-secretmanager==2.16.4
-google-cloud-vision==3.4.4numpy==1.24.
-3
+google-cloud-vision==3.4.4
+google-cloud-aiplatform==1.38.1
+numpy==1.24.3
 scikit-learn==1.3.0
 aiohttp==3.9.1
