--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -24,3 +24,7 @@ google-cloud-aiplatform==1.38.1
 numpy==1.24.3
 scikit-learn==1.3.0
 aiohttp==3.9.1
+python-magic==0.4.27
+slowapi==0.1.9
+bleach==6.2.0
+cryptography==41.0.8
