--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,30 +1,32 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-pydantic==2.5.0
+# Bumped pydantic to a version providing prebuilt wheels for Python 3.13 (avoid rust build of pydantic-core)
+pydantic==2.9.2
 pydantic-settings==2.1.0
-sqlalchemy==2.0.23
+# Bump SQLAlchemy for Python 3.13 compatibility (2.0.23 triggers TypingOnly assertion on 3.13)
+sqlalchemy>=2.0.34,<3.0
 alembic==1.13.1
-psycopg2-binary==2.9.9
+# Use psycopg2-binary on Python < 3.13 (wheels available); fall back to psycopg3 binary for 3.13+
+psycopg2-binary==2.9.9; python_version < "3.13"
+psycopg[binary]>=3.1.20; python_version >= "3.13"
 asyncpg==0.30.0
 greenlet==3.2.3
 redis==5.0.1
+slowapi==0.1.9
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
-pillow==10.1.0
+pillow>=11.0.0  # Updated for Python 3.13 wheel support (10.1.0 fails building)
 pytest==7.4.3
 pytest-asyncio==0.21.1
 pytest-cov==4.1.0
 httpx==0.25.2
 aiosqlite==0.21.0
 google-cloud-storage==2.10.0
-google-cloud-secretmanager==2.16.4
+# Correct package name is google-cloud-secret-manager (hyphenated). Using a compatible version range.
+google-cloud-secret-manager>=2.16.0,<3.0.0
 google-cloud-vision==3.4.4
 google-cloud-aiplatform==1.38.1
-numpy==1.24.3
-scikit-learn==1.3.0
+numpy>=2.0.0,<3  # Python 3.13 compatible wheels
+scikit-learn>=1.5.0,<1.6  # Earlier pin (1.3.0) lacks Python 3.13 wheels
 aiohttp==3.9.1
-python-magic==0.4.27
-slowapi==0.1.9
-bleach==6.2.0
-cryptography==41.0.8
