A lot of changes

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -11,7 +11,8 @@
     "skipLibCheck": true,
     "types": [
       "vitest/globals",
-      "node"
+      "node",
+      "vite/client"
     ],
     /* Bundler mode */
     "moduleResolution": "bundler",
