--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -3,25 +3,42 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "fashion-ai-backend"
-version = "1.0.0"
-description = "Fashion AI Platform Backend"
-authors = [{name = "Fashion AI Team"}]
+name = "ai-closet-backend"
+version = "2.0.0"
+description = "AI Closet 2.0 - Advanced Fashion Analysis Platform Backend"
+authors = [{name = "AI Closet Team"}]
 dependencies = [
-    "fastapi>=0.104.1",
-    "uvicorn[standard]>=0.24.0",
-    "pydantic>=2.5.0",
-    "pydantic-settings>=2.1.0",
-    "sqlalchemy>=2.0.23",
-    "alembic>=1.13.1",
-    "psycopg2-binary>=2.9.9",
-    "asyncpg>=0.30.0",
-    "greenlet>=3.2.3",
-    "redis>=5.0.1",
-    "python-jose[cryptography]>=3.3.0",
-    "passlib[bcrypt]>=1.7.4",
-    "python-multipart>=0.0.6",
-    "pillow>=10.1.0",
+    "fastapi>=0.116.1,<1.0.0",
+    "uvicorn[standard]==0.24.0",
+    "pydantic==2.9.2",
+    "pydantic-settings==2.1.0",
+    "sqlalchemy>=2.0.34,<3.0",
+    "alembic==1.13.1",
+    "psycopg2-binary==2.9.9; python_version < '3.13'",
+    "psycopg[binary]>=3.1.20; python_version >= '3.13'",
+    "asyncpg==0.30.0",
+    "greenlet==3.2.3",
+    "redis==5.0.1",
+    "slowapi==0.1.9",
+    "python-jose[cryptography]==3.3.0",
+    "passlib[bcrypt]==1.7.4",
+    "python-multipart==0.0.6",
+    "pillow>=11.0.0",
+    "httpx>=0.28.1,<1.0.0",
+    "anyio>=4.8.0,<5.0.0",
+    "aiosqlite==0.21.0",
+    "google-cloud-storage==2.10.0",
+    "google-cloud-secret-manager>=2.16.0,<3.0.0",
+    "google-cloud-vision==3.4.4",
+    "google-cloud-aiplatform==1.38.1",
+    "google-genai>=1.32.0,<2.0.0",
+    "numpy>=2.0.0,<3",
+    "scikit-learn>=1.5.0,<1.6",
+    "torch>=2.1.0,<3.0.0",
+    "transformers>=4.35.0,<5.0.0",
+    "tokenizers>=0.15.0,<1.0.0",
+    "scipy>=1.11.0,<2.0.0",
+    "aiohttp>=3.9.1,<4.0.0",
 ]
 
 [project.optional-dependencies]
