--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nomi-frontend",
-  "version": "1.0.0",
+  "name": "ai-closet-frontend",
+  "version": "2.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
